Corrected map scrolling (zoom, texture brush size) to not use event delta. This value is not uniform across different browsers. Instead the sign of the event delta is used. Log container resizing is added using buttons to increase or decrease the log container size. Overflow-y is hidden to stop scroll bar from temporarily appearing which was causing the map resize function to incorrectly calculate the map width.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,7 @@ body {
   image-rendering: -o-crisp-edges;
   image-rendering: -webkit-optimize-contrast;
   -ms-interpolation-mode: nearest-neighbor;
+  overflow-y: hidden;
 }
 
 :not(body) {
@@ -66,6 +67,7 @@ a {
   background-color: transparent;
   border: double 8px grey;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 #map {
@@ -83,6 +85,18 @@ a {
   background-color: transparent;
   border: double 8px grey;
   height: 100px;
+}
+
+#log-resize {
+  background-color: grey;
+  height: 4px;
+}
+
+#log-resize .log-resizer {
+  z-index: 1;
+  position: relative;
+  top: -5px;
+  cursor: pointer;
 }
 
 /* #log-container:after {
